2008-12-11  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/ruby-mode.el: Fix auto-mode-alist entry.

2008-12-10  Chong Yidong  <cyd@stupidchicken.com>

	* Makefile.in (ELCFILES): Add ruby-mode.elc.

	* term/xterm.el (xterm-remove-modify-other-keys): Fix error in
	terminal variable assignment.

2008-12-10  Yukihiro Matsumoto  <matz@ruby-lang.org>
	    Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* progmodes/ruby-mode.el: New file.

2008-12-10  Juanma Barranquero  <lekktu@gmail.com>

	* net/tramp.el (top): Don't fail if there is no current message.

2008-12-10  Kenichi Handa  <handa@m17n.org>

	* international/fontset.el (setup-default-fontset): Add an entry
	for characters in the Unicode SIP area.

2008-12-10  Glenn Morris  <rgm@gnu.org>

	* vc-mcvs.el: Move to obsolete/, with warning comment.
	* Makefile.in (ELCFILES): Update.

2008-12-10  Daiki Ueno  <ueno@unixuser.org>

	* epa-hook.el (epa-file-find-file-hook): Don't mark the current
	buffer unmodified.  (Bug#1509)
	* epa-file.el (epa-file-insert-file-contents): Set buffer's
	modification time if visiting a file and the content is
	successfully decrypted.

2008-12-09  Chong Yidong  <cyd@stupidchicken.com>

	* files.el (save-some-buffers): At each map-y-or-n-p iteration,
	check whether the buffer is still alive.

2008-12-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/rx.el (rx-submatch): Pass : to rx-form.

2008-12-09  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (ELCFILES): Update.

2008-12-08  Stefan Monnier  <monnier@iro.umontreal.ca>

	* autoinsert.el (auto-insert): Use expand-file-name instead of concat.
	Suggested by Eric Hanchrow <eric.hanchrow@gmail.com>.

2008-12-06  Chong Yidong  <cyd@stupidchicken.com>

	* term/xterm.el (terminal-init-xterm): Discard pending input
	before reading a reply to the terminal attributes query.

2008-12-05  Andreas Schwab  <schwab@suse.de>

	* dired.el (dired-font-lock-keywords): Fix last change.

2008-12-05  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
