@@ -1,5 +1,9 @@
 2008-12-11  Juanma Barranquero  <lekktu@gmail.com>
 
+	* w32proc.c (Fw32_get_locale_info): Decode long form of locale name.
+
+2008-12-11  Juanma Barranquero  <lekktu@gmail.com>
+
 	* process.c (Fsystem_process_attributes, syms_of_process):
 	Fix typo in name of Ssystem_process_attributes.
 	Reported by Ulrich Mueller <ulm@kph.uni-mainz.de>.
